infrastructure/base/configs/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  addresses:
  - type: IPAddress
    value: 192.168.178.210
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.home.arpa"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.arpa"
      tls:
        certificateRefs:
          - kind: Secret
            name: ca-key-pair
      allowedRoutes:
        namespaces:
          from: All
